increase white space around table

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <p> A description of the fields of the data is shown in 
                 the table below.
             </p>
-            <div style="width:100%;background-color: rgba(20, 229, 232, 0.68);">
+            <div style="width:100%;background-color: rgba(20, 229, 232, 0.68); padding:10px;">
                 <h3 style="text-align:center"> List of fields </h3>
                 <table id="data-fields" class="display" cellspacing="0" width="100%">
                     <thead>
