add functionality for user to see airports on map and select one

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                background-color: rgba(255,255,255,0.7);
                cursor:pointer;line-height:40px;">
              clear </span> 
+             <span id="show-top-airports"
+             style="position:absolute;
+               background-color: rgba(255,255,255,0.7);
+               left:400px;cursor:pointer;line-height:40px">
+             show top airports </span>
 
 
             <div class="overlay">
